--- a/CasaNova/imoveis/templates/base.html
+++ b/CasaNova/imoveis/templates/base.html
@@ -15,9 +15,10 @@
             </header>
 
             <nav>
-                <a href="{% url 'lista_imoveis' %}">Início</a>
+                <a href="{% url 'lista_imoveis' %}">Imóveis</a>
                 <a href="{% url 'criar_imovel' %}">Novo Imóvel</a>
-                
+                <a href="{% url 'lista_corretores' %}">Corretores</a>
+                <a href="{% url 'criar_corretor' %}">Novo Corretor</a>
             </nav>
 
             <main>
