--- a/CasaNova/imoveis/templates/base.html
+++ b/CasaNova/imoveis/templates/base.html
@@ -15,11 +15,19 @@
             </header>
 
             <nav>
-                <a href="{% url 'lista_imoveis' %}">Imóveis</a>
-                <a href="{% url 'criar_imovel' %}">Novo Imóvel</a>
-                <a href="{% url 'lista_corretores' %}">Corretores</a>
-                <a href="{% url 'criar_corretor' %}">Novo Corretor</a>
-            </nav>
+
+    {% if user.is_authenticated %}
+        <a href="{% url 'criar_imovel' %}">Novo Imóvel</a>
+        <a href="{% url 'criar_corretor' %}">Novo Corretor</a>
+        <a href="{% url 'lista_imoveis' %}">Imóveis</a>
+        <a href="{% url 'lista_corretores' %}">Corretores</a>
+        
+        <a href="{% url 'logout' %}">Sair ({{ user.username }})</a>
+    {% else %}
+        <a href="{% url 'login' %}">Entrar</a>
+        <a href="{% url 'register' %}">Registrar</a>
+    {% endif %}
+    </nav>
 
             <main>
                 {% block conteudo %}{% endblock %}
