--- a/CasaNova/imoveis/templates/corretor_detail.html
+++ b/CasaNova/imoveis/templates/corretor_detail.html
@@ -1,11 +1,49 @@
 {% extends 'base.html' %}
+
+{% block title %}
+    Detalhes do Corretor: {{ corretor.nome }}
+{% endblock %}
+
 {% block conteudo %}
     <h2>{{ corretor.nome }}</h2>
-    
-    <p><strong>CRECI:</strong> {{ corretor.creci }}</p>
-    <p><strong>Telefone:</strong> {{ corretor.telefone }}</p>
-    
-    <a href="{% url 'editar_corretor' corretor.id %}">Editar</a>
-    <a href="{% url 'deletar_corretor' corretor.id %}">Deletar</a>
-    <a href="{% url 'lista_corretores' %}">Voltar à Lista</a>
+
+    <div class="corretor-detail-wrapper">
+
+        <div class="corretor-info-card">
+            <h3>Informações do Corretor</h3>
+
+            <p><strong>Nome:</strong> {{ corretor.nome }}</p>
+            <p><strong>CRECI:</strong> {{ corretor.creci }}</p>
+            <p><strong>Telefone:</strong> {{ corretor.telefone }}</p>
+
+        </div>
+
+        <div class="corretor-lista-imoveis">
+            <h3>Imóveis associados</h3>
+
+            {% if corretor.imovel_set.all %}
+                <ul>
+                    {% for imovel in corretor.imovel_set.all %}
+                        <li>
+                            <a href="{% url 'detalhe_imovel' imovel.id %}">
+                                {{ imovel.titulo }}
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>Este corretor não possui imóveis cadastrados.</p>
+            {% endif %}
+        </div>
+
+    </div>
+
+    <div class="detail-actions">
+        <a href="{% url 'editar_corretor' corretor.id %}" class="submit-btn edit-btn">Editar</a>
+        <a href="{% url 'deletar_corretor' corretor.id %}" class="submit-btn delete-btn">Deletar</a>
+
+        <a href="{% url 'lista_corretores' %}" class="submit-btn back-btn">Voltar à Lista de Corretores</a>
+        <a href="{% url 'lista_imoveis' %}" class="submit-btn back-btn">Voltar à Lista de Imóveis</a>
+    </div>
+
 {% endblock %}
